# TACC-Stake-sc

./: .gitignore  Cargo.toml  README.md  addressStaked.py  erdpy.json  snippets.sh  stakeAirdrop.py  usersStaked.json
meta/: Cargo.toml
meta/src/: main.rs
output/: tiredclub.abi.json  tiredclub.imports.json  tiredclub.wasm  tiredclub.wat
src/: dao.rs  storage.rs  tiredclub.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
