[package]
name = "tiredclub"
version = "1.0.0"
authors = [ "Alessandro De Franceschi",]
edition = "2021"
publish = false

[lib]
path = "src/tiredclub.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dependencies.elrond-wasm]
version = "0.34.1"

[dependencies.elrond-wasm-modules]
version = "0.34.0"

[dev-dependencies.elrond-wasm-debug]
version = "0.34.1"
