[package]
name = "tiredclub-wasm"
version = "1.0.0"
edition = "2021"
publish = false
authors = [ "Alessandro De Franceschi",]

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.tiredclub]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.33.1"

[dependencies.elrond-wasm-output]
version = "0.33.1"
features = [ "wasm-output-mode",]
